Version 6.3.0

- Fixed shell sample to work correctly with various ramdisks,
including P2 Edge 32MB PSRAM, Ray's logic 4 bit PSRAM board, and
HyperRam

Version 6.2.1

- Applied some fixes for PropLoader from upstream and from @Wuerfel21

Version 6.2.0

- Added "no terminal" option

Version 6.1.0

- Added a basic kind of support for project files.

Version 6.0.0

- Changed the shell example to allow mounting of flash or SD
- Disabled warnings about bytecode

Version 5.9.24

- Added option to create zip archive

Version 5.9.22

- Make the built in terminal use the runtime character set encoding set specified in Options
- Expanded the ANSI control code support to include color and some effects

Version 5.9.20

- Added link to Ada's hyperlinked P2 documentation

Version 5.9.18

- Fixed some color issues in dark mode.

Version 5.9.15

- Modified file change code to check for external files change whenever we gain/lose focus
- Modified right click popup menu to only happen inside the editor pane
- Removed blinking quoted text highlighting in the editor

Version 5.9.12

- Added a few more examples

Version 5.9.10

- Added right-click popup cut/copy/paste menu to terminal windows
- Made "Auto Reload Files if changed externally" the default.

Version 5.9.9

- Updated PropLoader to try to fix some of the loading problems and to support 2000000 baud
- Moved baud rate changes to a sub-menu

Version 5.9.7

Major updates in this version, including:

- Added menu options for configuring IP address
- Made proploader (with Wifi support) the default loader for P2
- Added options to use a built in terminal emulator, instead of
  relying on an external one
- Added support for a few graphical DEBUG commands (TEXT and PLOT related)
- Made the default tab width 8 instead of 4
- Renamed the config file to `.flexprop6.config`; this makes sure
  everyone starts with a fresh config, and allows older flexprop to coexist

Version 5.9.6